# arm3dof

./: README.md  RobotKolVeKontrol.md
arm3dof/: CMakeLists.txt  package.xml
arm3dof/launch/: arm.launch.py  arm_common.launch.py  arm_load_sdf.launch.py  arm_load_xacro.launch.py  arm_sdf_run.launch.py  arm_xacro_run.launch.py
arm3dof/models/arm3dof/: model.config  model.urdf.xacro
arm_ws/install/: local_setup.sh  setup.sh
arm_ws/install/arm3dof/lib/arm3dof/: move_demo.py
arm_ws/install/arm3dof/share/ament_index/resource_index/package_run_dependencies/: arm3dof
arm_ws/install/arm3dof/share/arm3dof/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
arm_ws/install/arm3dof/share/arm3dof/cmake/: arm3dofConfig.cmake
arm_ws/install/arm3dof/share/arm3dof/launch/: arm.launch.py
arm_ws/install/arm3dof/share/arm3dof/models/arm3dof/: model.sdf
arm_ws/log/: latest_build  latest_list
arm_ws/src/arm3dof/: CMakeLists.txt
arm_ws/src/arm3dof/models/arm3dof/: model.config  model.sdf
arm_ws/src/arm3dof/src/: move_demo.py
src/: move_demotest1.py
