<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm3dof</name>
  <version>0.0.0</version>
  <description>3-DOF Robot Arm Simulation and Control with ROS 2 Jazzy and Gazebo Harmonic</description>
  <maintainer email="esatsimsek.6161@gmail.com">EsatSimsek</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
